<resources>
    <string name="app_name">Room Databases</string>
    <string name="Add_class">Add class</string>
    <string name="name_class">Name class</string>
    <string name="date_create">Date create</string>
    <string name="teacher"> Teacher</string>
    <string name="hint_name_class"> Please enter name class</string>
    <string name="hint_teacher">Please enter teacher name</string>
    <string name="add_student">Add student</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="Class">Class</string>
    <string name="hint_name">Please enter name</string>
    <string name="student"> Students</string>
    <string name="all">All</string>
    <string name="birthday_student_item"> Birth day: </string>
    <string name="class_name_student_item">Class:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="choose_tha_date">Choose tha date</string>
    <string name="edit_student">Edit student</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_file">Choose file</string>
    <string name="choose_the_date">Choose the date</string>
    <string name="add_information">Please enter entire information</string>
    <string name="add_photo">Add student photo</string>
    <string name="choose_add_class">Please choose or add class</string>
    <string name="student_exit">Student exited</string>
    <string name="choose_right_date">Please choose right the date</string>
    <string name="add_student_in_class">Please add student in chosen class</string>
    <string name="add_class_student_to_show">\"Add classes and students to show \"</string>
    <string name="class_exit">Class exited</string>
    <string name="update_success">Update success</string>
    <string name="unknown">Unknown</string>
    <string name="val">val</string>
</resources>