<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addclass.AddClassActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/AddClassToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_class"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/NameClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddClassToolbar"
        android:layout_marginTop="22dp"
        android:text="@string/name_class"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/edtClassName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NameClass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/hint_name_class"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/DateCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtClassName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/date_create"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rlDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DateCreate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/edtDateCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_edittext"
            android:hint="@string/choose_the_date"
            android:focusable="false"
            android:inputType="none"
            android:padding="10dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ivDateCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edtDateCreate"
            android:src="@drawable/ic_calendar"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:contentDescription="@null" />
    </RelativeLayout>

    <TextView
        android:id="@+id/Teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/teacher"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Teacher"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/hint_teacher"
        android:inputType="text"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAddClassInList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTeacher"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/background_button"
        android:text="@string/Add_class"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>